<resources>
    <string name="app_name">SumaDrivers</string>
    <string name="app_name_testing">SumaDrivers - Testing</string>
    <string name="logo_suma">Logo Suma</string>
    <string name="salir">Salir</string>
    <string name="faltan_permisos">Algunos permisos son requeridos para el correcto funcionamiento de la aplicación, favor de reiniciarla y aceptarlos</string>
    <string name="permisos_denegados">Algunos permisos fueron denegados de forma permanente. Es necesario darle los permisos a la aplicación desde configuraciones para poder continuar</string>
    <string name="abrir_configuraciones">Abrir configuraciones</string>
    <string name="play_services_unavailable">GooglePlayServices no está disponible para este dispositivo, no es posible continuar.</string>
    <string name="probando_conexion">Probando conexión a Internet…</string>
    <string name="internet_unavailable">No fue posible conectarse a Internet. Favor de avisar al encargado de sistemas o presionar el botón de Reintentar</string>
    <string name="phone_number_placeholder">123–456–7890</string>
    <string name="acceder">Acceder</string>
    <string name="ingresa_tu_linea">Ingresa tu línea de celular</string>
    <string name="acceder_con_numero">Acceder con número</string>
    <string name="acceder_con_email">Acceder con email</string>
    <string name="ingresa_tu_email">Ingresa tu email</string>
    <string name="ingresa_tu_password">Ingresa tu password</string>
    <string name="acceder_con_email_y_password">Acceder con email y password</string>
    <string name="foto_operador">Foto operador</string>
    <string name="foto_del_operador">Foto del operador</string>
    <string name="servicios">Servicios</string>
    <string name="bitacoras">Bitácoras</string>
    <string name="tickets">Tickets</string>
    <string name="mantenimiento">Mantenimiento</string>
    <string name="kit_de_limpieza">Kit de limpieza</string>
    <string name="directorio">Directorio telefónico</string>
    <string name="sol_desplazamiento">Solicitud desplazamiento</string>
    <string name="nombre_del_operador">Zcomodin</string>
    <string name="linea_telefono">333–333–3333</string>
    <string name="email_operador">zcomodin@suma.mx</string>
    <string name="auditorias">Auditorias</string>
    <string name="version_code">v0.0.0</string>
    <string name="tarjeta_de_contacto">Imágen de tarjeta de contacto</string>
    <string name="logo_de_la_empresa">Logo de la empresa</string>
    <string name="persona">Persona</string>
    <string name="servicio_por_confirmar">Servicio por confirmar</string>
    <string name="icono_combustible">Icono combustible</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="seleccione_su_gasolinera">Seleccione su Gasolinera:</string>
    <string name="litros_cargados">Litros cargados</string>
    <string name="precio">Precio</string>
    <string name="folio_del_ticket">Folio del ticket</string>
    <string name="guardar">Guardar</string>
    <string name="nuevo_registro">Nuevo registro</string>
    <string name="stringUnidadAsignada">Unidad asignada</string>
    <string name="stringFolioBitacora">Folio de bitácora</string>
    <string name="kilometrajeFicial">Kilometraje inicial</string>
    <string name="numeroPersonas">Número de personas</string>
    <string name="stringKilometrajeFinal">Kilometraje final</string>
    <string name="estatus">Estatus</string>
    <string name="confirmar_servicio">CONFIRMAR SERVICIO</string>
    <string name="abrir_bitacora">ABRIR BITÁCORA</string>
    <string name="iniciar_ruta">INICIAR RUTA</string>
    <string name="terminar_ruta">TERMINAR RUTA</string>
    <string name="cerrar_bitacora">CERRAR BITÁCORA</string>
    <string name="atras">Atrás</string>
    <string name="hoy">Hoy</string>
    <string name="siguiente">Siguiente</string>
    <string name="mes_siguiente">Mes siguiente</string>
    <string name="anterior">Mes anterior</string>
    <string name="aviso_kit_limpieza">El kit de limpieza solo puede requerirse en horas activas (9am a 3pm), con 24hrs de anticipación</string>
    <string name="mi_unidad">Mi unidad</string>
    <string name="foto_de_la_unidad">Foto de la unidad</string>
    <string name="tomar_unidad">TOMAR UNIDAD</string>
    <string name="notas">Notas</string>
    <string name="realizar_cambio">Realizar cambio</string>

    <string name="configuraciones">Configuraciones</string>
    <string name="msj_cargando">Cargando, espera un momento…</string>
    <string name="msj_no_content">No se encontraron datos en el servidor</string>
    <string name="carita_triste">Carita triste</string>
    <string name="msj_error_grave">Ohhh no, algo grave pasó en el servidor</string>
    <string name="msj_selecciona_unidad">Para comenzar a usar la aplicación debes seleccionar la unidad que operaciones te asignó</string>
    <string name="comentarios_hint">Comentarios:</string>
    <string name="cual_es_el_problema_hint">¿Cual es el problema?</string>
    <string name="enviar">Enviar</string>
    <string name="default_notification_channel_id">default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msj_campo_vacio">Este campo no debe dejarse vacío</string>
    <string name="msj_error_kilometraje_Min">El kilometraje ingresado no debe ser inferior</string>
    <string name="msj_error_kilometraje_Max">El kilometraje excede del rendimiento vehicular</string>
    <string name="msj_error_folio_min">El folio tiene que ser mayor</string>
    <string name="reintentar">Reintentar</string>
    <string name="visita_a_oficina">Visita a oficina</string>
    <string name="visita_a_taller">Visita a taller</string>
    <string name="title_activity_maps">Mapas</string>
    <string name="notification_title">Captura de aforos</string>
    <string name="notification_message">Iniciando servicio</string>

    <string name="notification_letrero_title">Mostrar letrero</string>
    <string name="notification_letrero_message">Se muestra letrero</string>

    <string name="enviar_datos_aforos">Enviar datos aforos</string>
    <string name="sanitizaciones">Sanitizaciones</string>
    <string name="sanitizado">Sanitizado</string>
    <string name="proxima_sanitizacion">Próxima sanitización:</string>
    <string name="datos_sanitizacion">Iniciar registro:</string>
    <string name="grabando_audio">Grabando audio</string>
    <string name="grabar">Grabar</string>
    <string name="reproducir">Reproducir</string>
    <string name="cancelar">Cancelar</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="cliente">Cliente</string>
    <string name="fecha">Fecha</string>
    <string name="operador">Operador</string>
    <string name="unidad">Unidad</string>
    <string name="finalizar">Finalizar</string>
    <string name="comenzar">Comenzar</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="continuar">Continuar</string>
    <string name="activar_letrero">Activar letrero</string>
    <string name="ver_mapa">Ver mapa</string>
    <string name="aniadir_ticket">Añadir ticket</string>
    <string name="options_ticket">Opciones</string>
    <string name="ver_gas_map">Ver gasolineras</string>
    <string name="actualizar_app">Actualizar App</string>
    <string name="actualizar_cache">Actualizar cache</string>

    <string name="others_kit">Insumos</string>
    <string name="spare_part">Refacciones</string>
    <string name="request_id">Solicitud I+D</string>
    <string name="request_th_id">Solicitud TH</string>
    <string name="request_admin">Solicitud Administración</string>
    <string name="request_mante">Solicitud Taller</string>
    <string name="request_store">Solicitud Almacén</string>
    <string name="adblue">Adblue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_gas">Gasolineras</string>
    <string name="base_url">https://maps.googleapis.com</string>

    <string name="title_alert_size_stop">Advertencia</string>
    <string name="message_alert_size_stop">La ruta tiene demasiadas paradas, es posible que no se puedan visualizar todas en tu viaje.</string>
    <string name="msg_km_sure">¿Esta seguro que el KM ingresado es correcto?</string>
    <string name="title_km_sure">Confirmación de KM</string>
    <string name="message_caution_config_server">No modifique la configuración de la aplicación sin consultar al equipo de I+D. Cualquier cambio puede causar que la aplicación deje de funcionar correctamente.</string>
</resources>
