<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="mx.suma.drivers.appstarter.StarterAppViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo_suma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/logo_suma"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logo_suma"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                style="@style/AlertMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/probando_conexion"
                app:goneUnless="@{viewModel.isTestingConnection}" />

            <TextView
                style="@style/AlertMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/internet_unavailable"
                app:goneUnless="@{viewModel.isInternetUnavailable}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{() -> viewModel.isConnected()}"
                android:text="@string/reintentar"
                app:goneUnless="@{viewModel.isInternetUnavailable}" />

            <TextView
                style="@style/AlertMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_services_unavailable"
                app:goneUnless="@{viewModel.playServicesUnavailable}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{() -> viewModel.onFinishApp()}"
                android:text="@string/salir"
                app:goneUnless="@{viewModel.playServicesUnavailable}" />

            <TextView
                style="@style/AlertMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permisos_denegados"
                app:goneUnless="@{viewModel.permissionsDenied}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{() -> viewModel.onOpenAppSettings()}"
                android:text="@string/abrir_configuraciones"
                app:goneUnless="@{viewModel.permissionsDenied}" />

            <TextView
                style="@style/AlertMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faltan_permisos"
                app:goneUnless="@{viewModel.missinPermissions}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="@{() -> viewModel.onFinishApp()}"
                android:text="@string/salir"
                app:goneUnless="@{viewModel.missinPermissions}" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:goneUnless="@{viewModel.showProgressBar}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>