<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="mainViewModel"
            type="mx.suma.drivers.SumaDriversViewModel" />
        <variable
            name="localViewModel"
            type="mx.suma.drivers.solDesplazamiento.SolDesplazamientoViewModel" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.button.MaterialButton
                style="@style/Widget.App.Button.Secondary"
                android:id="@+id/btn_request_id"
                android:onClick="@{() -> localViewModel.onNavigateToRequestId()}"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/request_id" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.App.Button.Secondary"
                android:id="@+id/btn_request_th"
                android:onClick="@{()-> localViewModel.onNavigateToRequestTH()}"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/request_th_id" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_request_admin"
                android:onClick="@{()-> localViewModel.onNavigateToRequestAdmin()}"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.App.Button.Secondary"
                android:gravity="center"
                android:text="@string/request_admin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_request_store"
                android:onClick="@{()-> localViewModel.onNavigateToRequestStore()}"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.App.Button.Secondary"
                android:gravity="center"
                android:text="@string/request_store" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_request_mante"
                android:onClick="@{()-> localViewModel.onNavigateToRequestMante()}"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.App.Button.Secondary"
                android:gravity="center"
                android:text="@string/request_mante" />
        </LinearLayout>
    </FrameLayout>

</layout>